<resources>
    <string name="app_name">Aiowner</string>
    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>

    <!--注册-->
    <string name="regist">注册</string>
    <string name="regist_phone">手机号</string>
    <string name="regist_phone_hint">你的手机号码</string>
    <string name="regist_psw">密码</string>
    <string name="confirm_psw">确认密码</string>
    <string name="regist_psw_hint">填写密码</string>
    <string name="regist_next">下一步</string>




    <!-- 描述数字键盘按下 -->
    <string name="numeric_keyboard_down">numeric keyboard down</string>
    <!-- 描述数字键盘弹起 -->
    <string name="numeric_keyboard_up">numeric keyboard up</string>
    <!-- 描述数字键盘取消 -->
    <string name="numeric_keyboard_cancel">numeric keyboard cancel</string>

    <string name="please_input_pwd">请输入原密码</string>
    <string name="please_input_new_pwd">请输入新密码</string>
    <string name="please_input_pwd_again">请确认密码</string>
    <string name="not_equals">两次输入的密码不一致,请重新输入！</string>
    <string name="setting_pwd_success">密码设置成功！</string>
    <string name="login_success">登录成功！</string>
    <string name="input_again">重输</string>
    <string name="delete">删除</string>
    <string name="test1">数字键盘1</string>
    <string name="test2">数字键盘2</string>
    <string name="test3">数字键盘3</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_msg">请选择类型：</string>
    <string name="dialog_ok">设置密码</string>
    <string name="dialog_cancel">登录</string>

    <!-- 数字按键 -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="neigh">9</string>
    <string name="tip_device_bind">设备绑定</string>
    <string name="tip_qr_scan">将二维码/条形码放入框内,完成绑定</string>
    <string name="tip_bind_failed">绑定失败</string>
    <string name="tip_bind_failed2">请重新绑定你的设备</string>
    <string name="tip_bind_success">绑定成功</string>
    <string name="tip_bind_success2">感谢使用AIO智能后视镜</string>
    <string name="tip_imei_error">请输入有效IMEI码</string>
    <string name="tip_bt_bind_success">继续使用</string>
    <string name="tip_bt_bind_failed">重新绑定</string>
    <string name="dialog_positive_text">确定</string>
    <string name="dialog_negative_text">取消</string>
    <string name="dialog_default_title">嘟嘟提醒</string>
    <string name="dialog_content_unbind">设备未绑定,是否绑定?</string>
    <string name="dialog_bind_bt_text">立即绑定</string>
    <string name="tip_unbind_success">解除绑定成功</string>

</resources>
